--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <span>Understanding the&nbsp;<span class="typewriter thick"></span></span>
         </div>
         <p>We are your portal into the world of Web 3.0. The tech is new and ever-evolving - it helps to have a guide. Here's what we recommend you do if you want to dive in.</p>
-        <img class="img-cl" src="/images/main final.jpg" alt="">
+        <img class="img-cl" src="images/main final.jpg" alt="">
     </div>
 <!-- METAVERSE -->
     <div class="eth" id="meta">
