--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style.scss">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.svg">
+    <link rel="icon" type="image/x-icon" href="https://github.com/immohitsen/UI/images/favicon.svg">
 </head>
 <body>
 
@@ -64,13 +64,13 @@
         </p></div>
       </div>
       <div class="meta-img">
-        <img src="/images/metaverse.png" alt="">
+        <img src="https://github.com/immohitsen/UI/images/metaverse.png" alt="">
       </div>
     </div>
       
     <!-- WEB 3.0 -->
     <div class="web3" id="web3"> 
-      <div class="img-web"><img src="/images/web3.png" alt=""></div>
+      <div class="img-web"><img src="https://github.com/immohitsen/UI/images/web3.png" alt=""></div>
       <div class="head-web"><h1><strong>Web 3.0</strong></h1><hr style="height:2px; width:240px; color: saddlebrown;">
       <div class="para-2"><p>Web 3.0, or Web3, is a set of values and technical applications that define a new era of the World Wide Web. 
         Prime Web 3.0 examples include ubiquity, decentralization, artificial intelligence, blockchain, and connectivity. 
